--- a/mix-manifest.json
+++ b/mix-manifest.json
@@ -1,7 +1,7 @@
 {
-    "/assets/dist/app.js": "/assets/dist/app.js?id=23d8bab588990fe57f2b",
-    "/assets/dist/app.css": "/assets/dist/app.css?id=1e03277b72720b71d90e",
-    "/assets/dist/vendor.js": "/assets/dist/vendor.js?id=45f99d2e2374e2957f99",
-    "/assets/dist/manifest.js": "/assets/dist/manifest.js?id=360cf4a2ac3af2c3da19",
-    "/assets/dist/vendor.css": "/assets/dist/vendor.css?id=994abb5bd2af7fa1bb18"
+    "/assets/dist/app.js": "/assets/dist/app.js?id=824375f3e374649c70ed",
+    "/assets/dist/vendor.css": "/assets/dist/vendor.css?id=994abb5bd2af7fa1bb18",
+    "/assets/dist/app.css": "/assets/dist/app.css?id=30f72c2149741d68b559",
+    "/assets/dist/vendor.js": "/assets/dist/vendor.js?id=a17cb01df60f9e372208",
+    "/assets/dist/manifest.js": "/assets/dist/manifest.js?id=360cf4a2ac3af2c3da19"
 }
