--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "laravel-mix": "^2.0.0",
     "leaflet": "^1.3.3",
     "reset-css": "^2.2.1",
+    "vue": "^2.5.17",
+    "vue-router": "^3.0.1",
     "webpack": "^3.11.0"
   }
 }
