--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/AyupDigital/Boilerplate_Dev#readme",
   "devDependencies": {
+    "axios": "^0.18.0",
     "breakpoint-sass": "^2.7.1",
     "browser-sync": "^2.23.6",
     "browser-sync-webpack-plugin": "^2.0.1",
