--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "laravel-mix": "^2.0.0",
     "leaflet": "^1.3.3",
     "reset-css": "^2.2.1",
+    "tiny-cookie": "^2.1.2",
     "vue": "^2.5.17",
     "webpack": "^3.11.0"
   }
