--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "reset-css": "^2.2.1",
     "tiny-cookie": "^2.1.2",
     "vue": "^2.5.17",
+    "vue-cookies": "^1.5.6",
     "vue-moment": "^4.0.0",
     "webpack": "^3.11.0"
   }
