--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "breakpoint-sass": "^2.7.1",
     "browser-sync": "^2.23.6",
     "browser-sync-webpack-plugin": "^2.0.1",
+    "clipboard": "^2.0.1",
     "laravel-mix": "^2.0.0",
     "leaflet": "^1.3.3",
     "reset-css": "^2.2.1",
@@ -34,6 +35,7 @@
     "vue-cookies": "^1.5.6",
     "vue-moment": "^4.0.0",
     "vue-mq": "^0.2.1",
+    "vue-social-sharing": "^2.3.3",
     "vuejs-paginate": "^2.0.1",
     "webpack": "^3.11.0"
   }
