--- a/package.json
+++ b/package.json
@@ -30,13 +30,17 @@
     "laravel-mix": "^2.0.0",
     "leaflet": "^1.3.3",
     "reset-css": "^2.2.1",
+    "showdown": "^1.8.6",
     "tiny-cookie": "^2.1.2",
     "vue": "^2.5.17",
     "vue-cookies": "^1.5.6",
+    "vue-media-embed": "^1.0.0",
     "vue-moment": "^4.0.0",
     "vue-mq": "^0.2.1",
     "vue-social-sharing": "^2.3.3",
+    "vue2-google-maps": "^0.10.2",
     "vuejs-paginate": "^2.0.1",
+    "vuex": "^3.0.1",
     "webpack": "^3.11.0"
   }
 }
