--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "showdown": "^1.8.6",
     "vue": "^2.5.17",
     "vue-cookies": "^1.5.6",
+    "vue-headful": "^2.0.1",
     "vue-media-embed": "^1.0.0",
     "vue-moment": "^4.0.0",
     "vue-mq": "^0.2.1",
