--- a/mix-manifest.json
+++ b/mix-manifest.json
@@ -1,7 +1,7 @@
 {
-    "/assets/dist/vendor.js": "/assets/dist/vendor.js",
-    "/assets/dist/app.js": "/assets/dist/app.js",
-    "/assets/dist/vendor.css": "/assets/dist/vendor.css",
-    "/assets/dist/app.css": "/assets/dist/app.css",
-    "/assets/dist/manifest.js": "/assets/dist/manifest.js"
+    "/assets/dist/vendor.js": "/assets/dist/vendor.js?id=d39dbc59799d57d42f78",
+    "/assets/dist/app.js": "/assets/dist/app.js?id=3cb9d3ae3b94e97b96c6",
+    "/assets/dist/vendor.css": "/assets/dist/vendor.css?id=333888dde1b2bb3e807a",
+    "/assets/dist/app.css": "/assets/dist/app.css?id=a79b419a220265dca9f1",
+    "/assets/dist/manifest.js": "/assets/dist/manifest.js?id=360cf4a2ac3af2c3da19"
 }
