Fixed various issues from browser testing closes #65

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/AyupDigital/Boilerplate_Dev#readme",
   "devDependencies": {
+    "@babel/polyfill": "^7.0.0",
     "axios": "^0.18.0",
     "breakpoint-sass": "^2.7.1",
     "browser-sync": "^2.23.6",
