--- a/appspec.yml
+++ b/appspec.yml
@@ -4,3 +4,6 @@ files:
   - source: /
     destination: /var/www/html
     overwrite: true
+hooks:
+  AfterInstall:
+    - location: scripts/AfterInstall.sh
