removed directory before installing latest version

--- a/appspec.yml
+++ b/appspec.yml
@@ -5,5 +5,7 @@ files:
     destination: /var/www/html
     overwrite: true
 hooks:
+  BeforeInstall:
+    - location: scripts/BeforeInstall.sh
   AfterInstall:
     - location: scripts/AfterInstall.sh
