--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
   "dependencies": {
     "bugsnag-js": "^4.7.3",
     "bugsnag-vue": "^1.0.1",
+    "node-sass": "^4.11.0",
     "vue-lodash": "^2.0.0"
   }
 }
