Fixed markdown support

--- a/package.json
+++ b/package.json
@@ -48,6 +48,6 @@
     "bugsnag-vue": "^1.0.1",
     "node-sass": "^4.11.0",
     "vue-lodash": "^2.0.0",
-    "vue-simple-markdown": "^1.0.8"
+    "vue-showdown": "^2.0.2"
   }
 }
